open id button fix

--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -59,7 +59,7 @@ ng-container {
   align-items: center;
 }
 
-#saml-login {
+.saml-login {
   .redirect-btn {
     margin: auto;
     display: block;
