--- a/src/app/plan-consultation/plan-consultation.component.scss
+++ b/src/app/plan-consultation/plan-consultation.component.scss
@@ -68,7 +68,7 @@ ng-container {
   align-items: center;
 }
 
-#saml-login {
+.saml-login {
   .redirect-btn {
     margin: auto;
     display: block;
