--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -83,7 +83,7 @@ ng-container {
   align-items: center;
 }
 
-#saml-login {
+.saml-login {
   .redirect-btn {
     margin: auto;
     display: block;
