--- a/src/app/test-media/test-media.component.scss
+++ b/src/app/test-media/test-media.component.scss
@@ -21,6 +21,10 @@ mat-form-field {
     vertical-align: top;
     padding: 10px 5%;
     box-sizing: border-box;
+
+    .error-message {
+      color: red;
+    }
   }
 
   p {
