--- a/src/app/invite-form/invite-form.component.scss
+++ b/src/app/invite-form/invite-form.component.scss
@@ -27,6 +27,18 @@
     flex: 1;
   }
 
+  .experts-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    .expert-field {
+      display: flex;
+      width: 100%;
+    }
+  }
+
   // ::ng-deep .mat-input-wrapper {
   //   width: 180px !important;
   // }
