--- a/src/app/invite-expoert/invite-expert.component.html
+++ b/src/app/invite-expoert/invite-expert.component.html
@@ -4,60 +4,72 @@
         class="invite-form"
         [formGroup]="myForm"
 >
-    <h1 mat-dialog-title style="display: block !important;">
-        {{ 'Invite Expert' | translate }}
-    </h1>
+    <h2 class="title">
+        {{ "consultations.inviteExpert" | translate }}
+    </h2>
     <div mat-dialog-content class="dialog-content">
         <div class="field-container">
-            <div class="expert-link-wrapper">
-                <p>{{data}}</p>
-                <mat-icon svgIcon="copy" (click)="copy()" [cdkCopyToClipboard]="data"></mat-icon>
+            <div class="send-link-wrapper">
+                <p>
+                    {{ "consultations.share" | translate }}
+                </p>
+                <mat-form-field class="w-100">
+                    <mat-label>{{"inviteForm.emailOrSMS" | translate}}</mat-label>
+                    <input
+                            matInput
+                            [placeholder]="'inviteForm.emailOrSMS' | translate"
+                            formControlName="email"
+                            [errorStateMatcher]="matcher"
+                            required
+                    />
+                    <mat-error
+                            *ngIf="myForm.controls.email.hasError('emailOrPhoneControl' )"
+                    >
+                        {{ "inviteForm.pleaseEnterValidEmailOrPhoneNumber" | translate }}
+                    </mat-error>
+                    <mat-error
+                            *ngIf="myForm.controls.email.hasError('required')"
+                    >
+                        {{ 'Email is' | translate }}
+                        <strong>{{ 'profileUpdate.required' | translate }}</strong>
+                    </mat-error>
+                    <mat-error
+                            *ngIf="myForm.controls.email.hasError('email')"
+                    >
+                        Enter valid email
+                    </mat-error>
+                </mat-form-field>
+                <div *ngIf="loading" class="loading darkoverlay">
+                    <mat-spinner [diameter]="35"></mat-spinner>
+                </div>
+                <button class="btn__send" [disabled]="loading" type="submit" mat-raised-button>
+                    {{ 'profileUpdate.send' | translate }}
+                </button>
             </div>
-            <mat-form-field class="w-100">
-                <mat-label>{{"inviteForm.emailOrSMS" | translate}}</mat-label>
-                <input
-                        matInput
-                        [placeholder]="'inviteForm.emailOrSMS' | translate"
-                        formControlName="email"
-                        [errorStateMatcher]="matcher"
-                        required
-                />
-                <mat-error
-                        *ngIf="myForm.controls.email.hasError('emailOrPhoneControl' )"
-                >
-                    {{ "inviteForm.pleaseEnterValidEmailOrPhoneNumber" | translate }}
-                </mat-error>
-                <mat-error
-                        *ngIf="myForm.controls.email.hasError('required')"
-                >
-                    {{ 'Email is' | translate }}
-                    <strong>{{ 'profileUpdate.required' | translate }}</strong>
-                </mat-error>
-                <mat-error
-                        *ngIf="myForm.controls.email.hasError('email')"
-                >
-                    Enter valid email
-                </mat-error>
-            </mat-form-field>
+            <div class="expert-link-wrapper">
+                <p>
+                    {{ 'consultations.shareBy' | translate }}
+                </p>
+                <div class="input-wrapper">
+                    <mat-form-field class="w-100">
+                        <mat-label>{{"Expert Link" | translate}}</mat-label>
+                        <input
+                                matInput
+                                [errorStateMatcher]="matcher"
+                                readonly
+                                formControlName="link"
+                        />
+                    </mat-form-field>
+
+                    <mat-icon svgIcon="copy" (click)="copy()" [cdkCopyToClipboard]="data"></mat-icon>
+                </div>
+
+                <button mat-button (click)="onNoClick()" type="button">
+                    {{ 'consultations.close' | translate }}
+                </button>
+
+            </div>
         </div>
 
-        <div *ngIf="error" class="error">
-            {{ error }}
-        </div>
-
-
-    </div>
-
-    <div *ngIf="loading" class="loading darkoverlay">
-        <mat-spinner [diameter]="35"></mat-spinner>
-    </div>
-
-    <div mat-dialog-actions align="end">
-        <button mat-button (click)="onNoClick()" type="button">
-            {{ 'profileUpdate.cancel' | translate }}
-        </button>
-        <button class="btn__send" [disabled]="loading" type="submit" mat-button>
-            {{ 'profileUpdate.send' | translate }}
-        </button>
     </div>
 </form>
