--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -278,6 +278,12 @@ textarea:focus {
   font-size: 1em;
   padding-top: 5px;
 }
+
+.experts_content {
+  font-size: 1em;
+  padding-top: 5px;
+}
+
 .c_info_wrap {
   margin-top: 23px;
   @media (min-width: 600px) {
