--- a/src/app/stream/peer-video/peer-video.component.scss
+++ b/src/app/stream/peer-video/peer-video.component.scss
@@ -68,3 +68,15 @@ video {
 ::ng-deep .mat-form-field.mat-focused .mat-form-field-ripple{
   background-color: #f5f5f5c2 !important;
 }
+
+
+#localUser {
+  position: absolute;
+  top: 0 !important;
+  right: 0 !important;
+  min-height: 180px;
+  height: 15vh;
+  min-width: 150px;
+  z-index: 1002;
+  width: auto;
+}
