--- a/src/app/invite-expoert/invite-expert.component.html
+++ b/src/app/invite-expoert/invite-expert.component.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <button mat-button (click)="onNoClick()" type="button">
-                    {{ 'consultations.close' | translate }}
+                    {{ 'consultation.close' | translate }}
                 </button>
 
             </div>
