--- a/src/app/video-room/video-room.component.scss
+++ b/src/app/video-room/video-room.component.scss
@@ -937,3 +937,14 @@ ion-fab-button.controller {
 }
 .custom-class-source-vid {
 }
+
+#localUser {
+  position: absolute;
+  top: 0 !important;
+  right: 0 !important;
+  min-height: 180px;
+  height: 15vh;
+  min-width: 150px;
+  z-index: 1004;
+  width: auto;
+}
