--- a/src/app/video-room/video-room.component.html
+++ b/src/app/video-room/video-room.component.html
@@ -62,6 +62,10 @@
         ></app-peer-video>
       </div>
 
+      <div *ngIf="screenStream">
+        <app-peer-video [stream]="screenStream"></app-peer-video>
+      </div>
+
       <!-- Remotes -->
       <div
         *ngFor="let user of this.remoteUsers"
@@ -95,8 +99,8 @@
       justify-content: center"
   >
     <button (click)="camStatusChanged()" class="fab accept-btn" mat-button>
-      <mat-icon *ngIf="camStatus === 'on'" st svgIcon="camera"></mat-icon>
-      <mat-icon *ngIf="camStatus === 'off'" st svgIcon="cameraOff"></mat-icon>
+      <mat-icon *ngIf="camStatus === 'on'"  svgIcon="camera"></mat-icon>
+      <mat-icon *ngIf="camStatus === 'off'"  svgIcon="cameraOff"></mat-icon>
     </button>
     <button
       (click)="rejectCall()"
@@ -104,11 +108,14 @@
       class="fab reject-btn"
       mat-button
     >
-      <mat-icon st svgIcon="hangup"></mat-icon>
+      <mat-icon svgIcon="hangup"></mat-icon>
     </button>
     <button (click)="muteStatusChanged()" class="fab accept-btn" mat-button>
       <mat-icon *ngIf="muteStatus === 'on'"  svgIcon="mic"></mat-icon>
       <mat-icon *ngIf="muteStatus === 'off'" svgIcon="micOff"></mat-icon>
     </button>
+    <button (click)="startScreenSharing()" *ngIf="!screenStream">Start </button>
+    <button (click)="stopScreenSharing()" *ngIf="screenStream">Stop </button>
+
   </div>
 </div>
