start and stop share screen icons

--- a/src/app/video-room/video-room.component.html
+++ b/src/app/video-room/video-room.component.html
@@ -63,7 +63,7 @@
       </div>
 
       <div *ngIf="screenStream">
-        <app-peer-video [stream]="screenStream"></app-peer-video>
+        <app-peer-video [stream]="screenStream" [id]="myCamStream.mediaStream.id"></app-peer-video>
       </div>
 
       <!-- Remotes -->
@@ -114,8 +114,12 @@
       <mat-icon *ngIf="muteStatus === 'on'"  svgIcon="mic"></mat-icon>
       <mat-icon *ngIf="muteStatus === 'off'" svgIcon="micOff"></mat-icon>
     </button>
-    <button (click)="startScreenSharing()" *ngIf="!screenStream">Start </button>
-    <button (click)="stopScreenSharing()" *ngIf="screenStream">Stop </button>
+    <button (click)="startScreenSharing()" class="fab accept-btn" mat-button *ngIf="!screenStream">
+      <mat-icon svgIcon="shareScreen"></mat-icon>
+    </button>
+    <button (click)="stopScreenSharing()" class="fab accept-btn" mat-button *ngIf="screenStream">
+      <mat-icon svgIcon="stopShareScreen"></mat-icon>
+    </button>
 
   </div>
 </div>
