hide share screen button

--- a/src/app/video-room/video-room.component.html
+++ b/src/app/video-room/video-room.component.html
@@ -114,12 +114,12 @@
       <mat-icon *ngIf="muteStatus === 'on'"  svgIcon="mic"></mat-icon>
       <mat-icon *ngIf="muteStatus === 'off'" svgIcon="micOff"></mat-icon>
     </button>
-    <button (click)="startScreenSharing()" class="fab accept-btn" mat-button *ngIf="!screenStream">
-      <mat-icon svgIcon="shareScreen"></mat-icon>
-    </button>
-    <button (click)="stopScreenSharing()" class="fab accept-btn" mat-button *ngIf="screenStream">
-      <mat-icon svgIcon="stopShareScreen"></mat-icon>
-    </button>
+<!--    <button (click)="startScreenSharing()" class="fab accept-btn" mat-button *ngIf="!screenStream">-->
+<!--      <mat-icon svgIcon="shareScreen"></mat-icon>-->
+<!--    </button>-->
+<!--    <button (click)="stopScreenSharing()" class="fab accept-btn" mat-button *ngIf="screenStream">-->
+<!--      <mat-icon svgIcon="stopShareScreen"></mat-icon>-->
+<!--    </button>-->
 
   </div>
 </div>
