Do first package cleanup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@ html,
 body {
   height: 100%;
 }
-@import "~@angular/material/theming";
-@import "~ng-pick-datetime/assets/style/picker.min.css";
+// @import "~@angular/material/theming";
+// @import "~ng-pick-datetime/assets/style/picker.min.css";
 @import "./variables.scss";
 // Plus imports for other components in your app.
 
