--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -312,7 +312,7 @@
                 border-radius: 0;
               "
               mat-button
-              (click)="download(msg.attachmentsURL)"
+              (click)="downloadPdf(msg.attachmentsURL)"
               type="submit"
             >
               <img
