chat scroll error fix

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -258,7 +258,7 @@
         </div>
 
 
-        <div #scoll [style.height]="chatHeight"  class="chat-wrapper" *ngIf="chatMessages.length">
+        <div #scoll [style.height]="chatHeight"  class="chat-wrapper" >
             <div
                     style="padding: 20px 37px"
                     [ngClass]="{ 'big-font': noPagination }"
