remove mime-type header, add validation for uploading file

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -401,6 +401,7 @@
                 #fileInput
                 style="display: none;"
                 type="file"
+                accept="application/pdf,image/jpeg,image/png"
                 (change)="handleFileInput($event)"
             />
 
