fix downloading pdf

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -297,7 +297,7 @@
                 border-radius: 0;
               "
                                     mat-button
-                                    (click)="downloadPdf(msg.attachmentsURL)"
+                                    (click)="downloadPdf(msg.attachmentsURL, msg.fileName)"
                                     type="submit"
                             >
                                 <img
