fix image upload issue, add error modal

--- a/src/app/video-room/video-room.component.html
+++ b/src/app/video-room/video-room.component.html
@@ -23,7 +23,7 @@
   </h3> -->
   <div style="width: 170px; margin: auto; margin-top: 40px">
     <button (click)="joinToSession()" class="fab accept-btn" mat-button>
-      <mat-icon st svgIcon="camera"></mat-icon>
+      <mat-icon svgIcon="camera"></mat-icon>
     </button>
     <button
       (click)="rejectCall()"
@@ -31,7 +31,7 @@
       class="fab reject-btn"
       mat-button
     >
-      <mat-icon st svgIcon="hangup"></mat-icon>
+      <mat-icon svgIcon="hangup"></mat-icon>
     </button>
 
   </div>
