--- a/src/app/consultations/consultations.component.html
+++ b/src/app/consultations/consultations.component.html
@@ -30,34 +30,28 @@
     </h4>
 
     <table class="consultations" *ngIf="consultations.length">
-      <tr
+      <tr (click)="showChat(consultation._id)"
         *ngFor="
           let consultation of consultations;
           let i = index;
-          trackBy: trackItem | paginate: { itemsPerPage: 10, currentPage: page }
-        "
-      >
+          trackBy: trackItem | paginate: { itemsPerPage: 10, currentPage: page }">
         <td
-          (click)="exportPDF(consultation)"
+          (click)="exportPDF($event, consultation)"
           *ngIf="status === 'closed'"
           class="pdf"
         >
-          <div
-            *ngIf="PDFConsultation && PDFConsultation._id === consultation._id"
-          >
+          <div *ngIf="PDFConsultation && PDFConsultation._id === consultation._id">
             <mat-spinner [diameter]="35"></mat-spinner>
           </div>
 
-          <div
-            *ngIf="!PDFConsultation || PDFConsultation._id !== consultation._id"
-          >
+          <div *ngIf="!PDFConsultation || PDFConsultation._id !== consultation._id">
             <mat-icon
               svgIcon="pdf"
               style="width: 25px; height: 25px;"
             ></mat-icon>
           </div>
         </td>
-        <td (click)="showChat(consultation._id)">
+        <td>
           <span class="tile-header">{{
             "consultations.patient" | translate
           }}</span>
@@ -77,7 +71,7 @@
            </span>
           </ng-container>
         </td>
-        <td (click)="showChat(consultation._id)">
+        <td>
           <span class="tile-header">{{
             "consultations.waitingQueue" | translate
           }}</span>
@@ -87,7 +81,7 @@
               : "Général"
           }}
         </td>
-        <td *ngIf="status != 'closed'" (click)="showChat(consultation._id)">
+        <td *ngIf="status != 'closed'">
           <span class="tile-header">{{
             "consultations.message" | translate
           }}</span>
@@ -99,7 +93,7 @@
             ) | slice: 0:25
           }}
         </td>
-        <td *ngIf="status === 'closed'" (click)="showChat(consultation._id)">
+        <td *ngIf="status === 'closed'">
           <span class="tile-header">{{
             "consultations.startDateTime" | translate
           }}</span>
@@ -107,7 +101,7 @@
             consultation.consultation.createdAt | date: "d MMM yyyy HH:mm":"fr"
           }}
         </td>
-        <td *ngIf="status != 'closed'" (click)="showChat(consultation._id)">
+        <td *ngIf="status != 'closed'">
           <span class="tile-header">{{
             "consultations.time" | translate
           }}</span>
@@ -118,7 +112,7 @@
             ) | msgTime
           }}
         </td>
-        <td *ngIf="status === 'closed'" (click)="showChat(consultation._id)">
+        <td *ngIf="status === 'closed'">
           <span class="tile-header">{{
             "consultations.duration" | translate
           }}</span>
@@ -133,17 +127,10 @@
             >  -->
 
           <td 
-          *ngFor="let displayItem of configService.config.metadata"
-             
-            >
+          *ngFor="let displayItem of configService.config.metadata">
 
-            <ng-container
-            
-            *ngIf="status != 'closed'" 
-            (click)="showChat(consultation._id)"
-            >
-            
-            <span 
+            <ng-container *ngIf="status != 'closed'">
+            <span
               class="tile-header">
               {{ displayItem }}
              </span>
@@ -171,9 +158,7 @@
           
         <td
           class="online-status-cell"
-          *ngIf="status != 'closed'"
-          (click)="showChat(consultation._id)"
-        >
+          *ngIf="status != 'closed'">
           <span
             class="tile-header"
             style="margin-bottom: 0px !important; margin-top: 8px;"
@@ -189,9 +174,7 @@
         </td>
         <td class="online-status-cell">
           <ng-container
-            *ngIf="status != 'closed' && consultation.consultation.translator"
-            (click)="showChat(consultation._id)"
-          >
+            *ngIf="status != 'closed' && consultation.consultation.translator">
             <span
               class="tile-header"
               style="margin-bottom: 0px !important; margin-top: 8px;"
@@ -228,7 +211,7 @@
 
         <td>
           <button
-            (click)="openDialog(consultation)"
+            (click)="openDialog($event,consultation)"
             class="invite-btn"
             mat-button
             *ngIf="status === 'closed'"
@@ -236,7 +219,7 @@
             {{ "consultations.sendAgainANewInvitation" | translate }}
           </button>
           <button
-            (click)="resendInvite(consultation.consultation.invite)"
+            (click)="resendInvite($event,consultation.consultation.invite)"
             class="invite-btn"
             mat-button
             *ngIf="status !== 'closed'"
@@ -244,7 +227,7 @@
             {{ "consultations.sendAgainTheInvitation" | translate }}
           </button>
         </td>
-        <td (click)="showChat(consultation._id)" *ngIf="status != 'closed'">
+        <td *ngIf="status != 'closed'">
           <span class="tile-header" *ngIf="consultation.unreadCount">{{
             "consultations.unread" | translate
           }}</span>
@@ -256,7 +239,7 @@
             matBadgeColor="warn"
           ></mat-icon>
         </td>
-        <td (click)="showChat(consultation._id)">
+        <td>
           <mat-icon svgIcon="next"></mat-icon>
         </td>
       </tr>
