refs #6125, Display proper error if no mediasoup server available

--- a/src/app/consultation/consultation.component.html
+++ b/src/app/consultation/consultation.component.html
@@ -80,7 +80,7 @@
       mat-button
       *ngIf="!currentCall"
     >
-      <mat-icon st svgIcon="mic"></mat-icon> &nbsp;&nbsp;
+      <mat-icon svgIcon="mic"></mat-icon> &nbsp;&nbsp;
       {{ "consultation.audioCall" | translate }}
     </button>
     <button
