--- a/src/app/invite-expoert/invite-expert.component.html
+++ b/src/app/invite-expoert/invite-expert.component.html
@@ -14,7 +14,7 @@
                     {{ "consultations.share" | translate }}
                 </p>
                 <mat-form-field class="w-100">
-                    <mat-label>{{"inviteForm.emailOrSMS" | translate}}</mat-label>
+                    <mat-label class="label">{{"inviteForm.emailOrSMS" | translate}}</mat-label>
                     <input
                             matInput
                             [placeholder]="'inviteForm.emailOrSMS' | translate"
@@ -52,7 +52,7 @@
                 </p>
                 <div class="input-wrapper">
                     <mat-form-field class="w-100">
-                        <mat-label>{{"Expert Link" | translate}}</mat-label>
+                        <mat-label class="label">{{"consultation.expert_link" | translate}}</mat-label>
                         <input
                                 matInput
                                 [errorStateMatcher]="matcher"
