--- a/src/app/profile-update/profile-update.component.scss
+++ b/src/app/profile-update/profile-update.component.scss
@@ -1,4 +1,3 @@
-@import "variables.scss";
 
 .phone-num {
   display: flex;
@@ -100,7 +99,7 @@ mat-form-field {
   
   &::ng-deep .mat-progress-spinner circle,
   .mat-spinner circle {
-    stroke: #2871bd !important;
+    stroke: var(--primary-color) !important;
   }
 }
 
