--- a/src/app/video-room/video-room.component.scss
+++ b/src/app/video-room/video-room.component.scss
@@ -22,22 +22,13 @@
 }
 
 .bounds {
-  // background-color: #494949;
   overflow: hidden;
-  // position: absolute;
-  // left: 0;
-  // right: 0;
-  top: 0px;
+  top: 0;
   bottom: 0;
-  height: inherit;
-  // max-width: 800px;
   height: 100%;
   width: 100%;
   position: relative;
-  // min-width: 400px !important;
-  //width: inherit;
-  background-size: 100%;
-  background-position: center;
+  background: var(--primary-color);
 }
 
 .boundsLight {
@@ -913,11 +904,13 @@ ion-fab-button.controller {
 }
 
 .ringing {
-  background-image: url("/assets/background.jpg");
+  background: var(--primary-color);
 }
+
 .fixed {
   transform: translateY(0px) !important;
 }
+
 .fab {
   width: 65px;
   height: 65px;
