change doctor app primary color to read from backend

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,10 +14,10 @@
 }
 
 .main-logo {
-  max-width: 100%;
+  max-width: 70px;
   height: auto;
   display: block;
-  margin: 16px auto;
+  margin: 0 auto;
 }
 
 .at {
