minor style fixes

--- a/src/app/invite-form/invite-form.component.html
+++ b/src/app/invite-form/invite-form.component.html
@@ -446,7 +446,7 @@
                 >
                     {{ "inviteForm.cancel" | translate }}
                 </button>
-                <button class="btn__send" [disabled]="loading" type="submit" mat-button>
+                <button class="btn__send btn_submit" [disabled]="loading" type="submit" mat-button>
                     <ng-container *ngIf="edit">
                         {{ "inviteForm.update" | translate }}
 
