--- a/src/app/invite-form/invite-form.component.scss
+++ b/src/app/invite-form/invite-form.component.scss
@@ -95,6 +95,10 @@
   background-color: var(--primary-color);
   color: #ffffff;
 }
+.btn_submit {
+  background-color: var(--app-green);
+  color: #ffffff;
+}
 
 .btn__cancel {
   background-color: rgb(255, 45, 45);
