minor style fix

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -88,7 +88,7 @@ ng-container {
     border-radius: 60px;
     text-align: center;
     height: 48px;
-    color: var(--primary-color);
+    color: black;
     padding-top: 5px;
   }
 }
