add ability to upload gif

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -393,7 +393,7 @@
                 #fileInput
                 style="display: none;"
                 type="file"
-                accept="application/pdf,image/jpeg,image/png"
+                accept="application/pdf,image/jpeg,image/png,image/gif"
                 (change)="handleFileInput($event)"
             />
 
